# zilker-sdk

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING  GUIDE.md  NOTICE  README.md  build.gradle  settings.gradle  setup_build.sh  version.properties
branding/: CMakeLists.txt  README.md  createBranding.sh  createHeader.sh
branding/devpartner/: communication.conf.default
branding/stock/: communication.conf.default  globalSettings.properties  security.conf.default
filesystem/: CMakeLists.txt  createBasicVersion.sh  createBrandDefaults.sh  createCopies.sh
filesystem/etc/: WhiteList.xml  log4crc
filesystem/linux/etc/: watchdog.conf  zlog.conf
filesystem/linux/scripts/: env.sh  xhBackup.sh  xhRestore.sh  xhSetup.sh  xhStartup.sh
filesystem/pi/etc/: watchdog.conf
filesystem/pi/scripts/: env.sh  xhBackup.sh  xhRestore.sh  xhSetup.sh  xhStartup.sh
filesystem/rdk/arrisxb6/etc/: watchdog.conf  zlog.conf
filesystem/rdk/arrisxb6/scripts/: xbb_metrics.sh  xhGetHalInfo.sh  xhSet_tz.sh  xhSetup.sh  xhStartup.sh
filesystem/rdk/common/: xhBackup.sh  xhDiag.sh  xhGetHalInfo.sh  xhRestore.sh  xhSet_tz.sh  zlog.conf
filesystem/rdk/common/xb6/: watchdog.conf
filesystem/rdk/common/xb7/: watchdog.conf
filesystem/rdk/csxb7/scripts/: env.sh  xhDiag.sh  xhSetup.sh  xhStartup.sh
filesystem/rdk/tchxb6/scripts/: env.sh  xbb_metrics.sh  xhBackup.sh  xhSetup.sh  xhStart_core.sh  xhStartup.sh
filesystem/rdk/tchxb7/etc/: watchdog.conf
filesystem/rdk/tchxb7/scripts/: env.sh  xhRestore.sh  xhSetup.sh  xhStartup.sh
source/hal/sysinfo/: CMakeLists.txt  README.txt
source/hal/sysinfo/public/sysinfo/: sysinfoHAL.h
source/hal/sysinfo/stub/: CMakeLists.txt
source/hal/sysinfo/stub/src/: sysinfoHW.c
source/hal/sysinfo/test/: CMakeLists.txt
source/hal/sysinfo/test/src/: sysInfo.c  sysInfo.h
source/integrations/touchstone/touchstoneTest/: CMakeLists.txt
source/integrations/touchstone/touchstoneTest/src/: touchstoneTest.c
source/integrations/xbb/libxbb/: CMakeLists.txt
source/integrations/xbb/libxbb/public/: xbb.h
source/integrations/xbb/libxbb/src/: xbb.c
source/libs/breakpad/c/: CMakeLists.txt
source/libs/breakpad/c/public/: breakpadHelper.h
source/libs/breakpad/c/src/: breakpadHelper.cpp
source/libs/concurrent/c/: CMakeLists.txt
source/libs/concurrent/c/src/: delayedTask.c  icBlockingQueue.c  icThreadSafeWrapper.c  repeatingTask.c  taskExecutor.c  threadPool.c  threadUtils.c  timedWait.c
source/libs/config/c/: CMakeLists.txt
source/libs/config/c/src/: backupUtils.c  obfuscation.c  protectConfig.c  simpleProtectConfig.c  storage.c
source/libs/config/c/test/: CMakeLists.txt
source/libs/cslt/: CMakeLists.txt  README.md  stringifyFiles.sh
source/libs/cslt/public/cslt/: cslt.h  icrules.h  sheens.h
source/libs/cslt/src/: cslt.c  cslt_internal.h  passthru_transcoder.c  passthru_transcoder.h
source/libs/cslt/src/icrule/: icrule_transcoders.c  icrule_transcoders.h
source/libs/cslt/src/sheens/: sheens_javascript.h  sheens_json.c  sheens_json.h  sheens_request.c  sheens_request.h  sheens_transcoder_actions.c  sheens_transcoder_constraints.c  sheens_transcoder_negative.c  sheens_transcoder_schedules.c  sheens_transcoder_triggers.c  sheens_transcoders.c  sheens_transcoders.h
source/libs/cslt/test/: CMakeLists.txt  internalActionList.xml  masterActionList.xml
source/libs/cslt/test/src/: icrule_test.c  main.c  sheens_test.c  test_internal.h
source/libs/device/: CMakeLists.txt
source/libs/device/camera/c/: CMakeLists.txt
source/libs/device/descriptors/: WhiteList.xsd
source/libs/device/descriptors/c/: CMakeLists.txt
source/libs/device/helper/c/: CMakeLists.txt
source/libs/device/philipsHue/c/: CMakeLists.txt
source/libs/device/rtcoaWifi/c/: CMakeLists.txt
source/libs/device/simplified/c/: CMakeLists.txt
source/libs/device/sonos/c/: CMakeLists.txt
source/libs/log/c/: CMakeLists.txt
source/libs/log/c/src/: loggingCommon.c  loggingCommon.h  loggingDebug.c  loggingLog4c.c  loggingRdk.c  loggingSyslog.c
source/libs/url/c/: CMakeLists.txt
source/libs/url/c/src/: socketHelper.c  uriDispatcher.c  urlHelper.c
source/libs/url/c/test/: CMakeLists.txt
source/libs/util/c/: CMakeLists.txt  README.txt
source/libs/util/c/src/: base64.c  fileUtils.c  ipAddrUtils.c  macAddrUtils.c  md5.c  parsePropFile.c  regexUtils.c  stringUtils.c  version.c
source/libs/util/c/test/: CMakeLists.txt
source/libs/zhal/c/: CMakeLists.txt
source/libs/zhal/c/src/: zhalAsyncReceiver.c  zhalAsyncReceiver.h  zhalEventHandler.c  zhalImpl.c  zhalPrivate.h  zhalRequests.c
source/libs/zhal/c/test/: CMakeLists.txt
source/services/automation/core/: CMakeLists.txt
source/services/automation/core/propDefs/: propertyDefinitions.json
source/services/automation/core/src/: automationAction.c  automationAction.h  automationBroadcastEvent.c  automationBroadcastEvent.h  automationEngine.c  automationEngine.h  automationService.c  automationService.h  automationServiceIpcHandler.c  automationServiceMain.c  automationServiceTranscoder.c  automationServiceTranscoder.h  automationSunTime.c  automationSunTime.h  automationSystemStatus.c  automationSystemStatus.h  automationTimerTick.c  automationTimerTick.h
source/services/automation/core/test/: patternmatching.sh
source/services/comm/core/: CMakeLists.txt
source/services/comm/core/propDefs/: activationPropertyDefinitions.json
source/services/comm/core/src/: channel.h  channelManager.c  channelManager.h  commServiceCommon.h  commServiceEventBroadcaster.c  message.c  (+6 more)
source/services/device/core/: CMakeLists.txt
source/services/rdkIntegration/: CMakeLists.txt
source/services/rdkIntegration/config/: XHFW.xml
source/services/rdkIntegration/src/: common.h  parodus_interface.c  rdkIntegrationService.c
tools/ipcGenerator/: CMakeLists.txt  ipcGenerator.gradle  ipcGenerator.sh
tools/ipcGenerator/definitions/: CMakeLists.txt  automationService.xml  backupRestoreService.xml  commService.xml  cronEvent.xml  deviceService.xml  pkiService.xml  ports.txt  propsService.xml  securityService.xml  watchdogService.xml
(+1095 files in other folders)
